project updated